Fixed the overflow

--- a/queries.css
+++ b/queries.css
@@ -15,6 +15,10 @@
 }
 
 @media (max-width: 576px) {
+  .logo {
+    height: 3rem;
+  }
+
   .img-sm-size {
     width: 80%;
   }
